--- a/testing.html
+++ b/testing.html
@@ -1,5 +1,6 @@
 
 
+
 <!DOCTYPE html>
 <html lang="en" theme="White">
 <head>
@@ -14,6 +15,11 @@
 <link href="../assets/images/verified.svg" rel="shortcut icon" type="image/x-icon">
 <meta name="twitter:card" content="summary">
 <link rel="preload" href="https://feds.lol/module/newww/css/app.css" as="style">
+<style>@import url('//fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');</style>
+<link href="https://fonts.cdnfonts.com/css/common-pixel" rel="stylesheet">
+<style>@import url('https://fonts.cdnfonts.com/css/common-pixel');</style>
+<link href="https://fonts.cdnfonts.com/css/pf-tempesta-five" rel="stylesheet">
+<style>@import url('https://fonts.cdnfonts.com/css/pf-tempesta-five');</style>
 <link rel="stylesheet" href="https://feds.lol/module/newww/main.css">
 <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 <link href="assets/vendors/animation/animate.css" rel="stylesheet">
@@ -92,7 +98,7 @@ window.onload = function () {
 	}
 		</style>
 <main style="">
-<div class="fixed w-full h-full" style="background-image:linear-gradient(rgba(0, 0, 0, 0.60), rgba(0, 0, 0, 0.60)),url('https://feds.ventryshield.net/?url=https://i.pinimg.com/originals/1e/04/4a/1e044a15f78be12843005fd1abfb73bc.gif'); background-position: center;background-repeat: no-repeat;background-size: cover;background-attachment: fixed; background-position: center;"></div>
+<div class="fixed w-full h-full" style="background-image:linear-gradient(rgba(0, 0, 0, 0.60), rgba(0, 0, 0, 0.60)),url('https://cdn.discordapp.com/attachments/1004849202507038804/1061448840676384900/IMG_4146.gif'); background-position: center;background-repeat: no-repeat;background-size: cover;background-attachment: fixed; background-position: center;"></div>
 <style>
 
 
@@ -106,17 +112,243 @@ window.onload = function () {
 	
 }
 
+.wrapper .button {
+        display: inline-block;
+        height: 60px;
+        width: 60px;
+        float: left;
+        margin: 0 5px;
+        overflow: hidden;
+        background: rgb(135, 167, 250);
+        border-radius: 51px;
+        cursor: pointer;
+        box-shadow: 0px 10px 10px rgb(0, 0, 0);
+        transition: all 0.3s ease-out;
+        color: black;
+    }
+
+    .wrapper .button:hover {
+        width: 200px;
+        color: black;
+    }
+
+    .wrapper .button .icon {
+        display: inline-block;
+        height: 60px;
+        width: 60px;
+        text-align: center;
+        border-radius: 500px;
+        box-sizing: border-box;
+        line-height: 60px;
+        transition: all 0.3s ease-out;
+    }
+
+    .wrapper .button .icon i {
+        font-size: 25px;
+        line-height: 60px;
+        transition: all 0.3s ease-out;
+    }
+
+    .wrapper .button:hover .icon i {
+        color: #fff;
+    }
+
+    .wrapper .button span {
+        font-size: 20px;
+        font-weight: 500;
+        line-height: 60px;
+        margin-left: 10px;
+        transition: all 0.3s ease-out;
+        color: black;
+    }
+
+    .footer p, h4, a {
+        text-align: center;
+        color: white;
+    }
 
 
+    /*
+    --------------------------------------------
+    */
+
+    .wrapper .button.discord:hover .icon {
+        background: #303030;
+    }
+
+    .wrapper .button.discord span {
+        color: #303030;
+    }
+
+    .wrapper .button.github:hover .icon {
+        background: #303030;
+    }
+
+    .wrapper .button.github span {
+        color: #303030;
+    }
+
+    .wrapper .button.tiktok:hover .icon {
+        background: #303030;
+    }
+
+    .wrapper .button.tiktok span {
+        color: #303030;
+    }
+
+    .wrapper .button.youtube:hover .icon {
+        background: #303030;
+    }
+
+    .wrapper .button.youtube span {
+        color: #303030;
+    }
+
+    .wrapper .button.twitch:hover .icon {
+        background: #303030;
+    }
+
+    .wrapper .button.twitch span {
+        color: #303030;
+    }
+
+    .wrapper .button.twitter:hover .icon {
+        background: #303030;
+    }
+
+    .wrapper .button.twitter span {
+        color: #303030;
+    }
+
+    .wrapper .button.snapchat:hover .icon {
+        background: #303030;
+    }
+
+    .wrapper .button.snapchat span {
+        color: #303030;
+    }
+
+    .wrapper .button.steam:hover .icon {
+        background: #303030;
+    }
+
+    .wrapper .button.steam span {
+        color: #303030;
+    }
+
+    .wrapper .button.instagram:hover .icon {
+        background: #303030;
+    }
+
+    .wrapper .button.instagram span {
+        color: #303030;
+    }
+
+    .wrapper .button.facebook:hover .icon {
+        background: #4267B2;
+    }
+
+    .wrapper .button.facebook span {
+        color: #4353ff
+    }
+
+    .wrapper .button.spotify:hover .icon {
+        background: #303030;
+    }
+
+    .wrapper .button.spotify span {
+        color: #303030;
+    }
+
+    .wrapper .button.reddit:hover .icon {
+        background: #303030;
+    }
+
+    .wrapper .button.reddit span {
+        color: #303030;
+    }
+
+    .wrapper .button.soundcloud:hover .icon {
+        background: #303030;
+    }
+
+    .wrapper .button.soundcloud span {
+        color: #303030;
+    }
+
+    .wrapper .button.pinterest:hover .icon {
+        background: #303030;
+    }
+
+    .wrapper .button.pinterest span {
+        color: #303030;
+    }
+
+    .wrapper .button:hover .icon {
+        background: #303030;
+    }
+
+    .wrapper .button span {
+        color: #303030;
+    }
+
+    .badge {
+        position: relative;
+        display: inline-block;
+        height: 28px;
+        width: 28px;
+    }
+
+    .badge .badge-tooltiptext {
+        visibility: hidden;
+        width: 120px;
+        background-color: #555;
+        color: #fff;
+        text-align: center;
+        border-radius: 6px;
+        padding: 5px 0;
+        position: absolute;
+        z-index: 1;
+        bottom: 125%;
+        left: 50%;
+        margin-left: -60px;
+        opacity: 0;
+        transition: opacity 0.3s;
+    }
+
+    .badge .badge-tooltiptext::after {
+        content: "";
+        position: absolute;
+        top: 100%;
+        left: 50%;
+        margin-left: -5px;
+        border-width: 5px;
+        border-style: solid;
+        border-color: #555 transparent transparent transparent;
+    }
+
+    .badge:hover .badge-tooltiptext {
+        visibility: visible;
+        opacity: 1;
+    }
+
+    .editBtn {
+        background-color: #282828;
+        background-size: cover;
+        border-radius: 7px;
+        padding: 8px;
+        color: white;
+        cursor: pointer;
+    }
 </style>
 <div class="clickanywhere premium_border">
 <div class="click_body" style="height:100%;width:100%;">
 <div class="click_anywhere">
-<h4 style="color:white;font-size:12pt;">[Click Anywhere]</h4>
+<h4 style="color:white;font-size:12pt;">[$]</h4>
 </div>
 <audio>
-<source src="https://cdn.discordapp.com/attachments/1066521063418245130/1066526769097748560/A.mp3" type="audio/mpeg">
-<source src="https://cdn.discordapp.com/attachments/1066521063418245130/1066526769097748560/A.mp3" type="audio/ogg">
+<source src="" type="audio/mpeg">
+<source src="" type="audio/ogg">
 </audio>
 <div id="sounddiv"><bgsound id="sound"></div>
 </div>
@@ -128,29 +360,28 @@ window.onload = function () {
 <div class="p-10">
 <div class="not-last-child:mb-8">
 <div class="-mt-[85px]">
-<img class="w-44 h-44 rounded-full mx-auto shadow-avatar" src="https://feds.ventryshield.net/?url=https://cdn.discordapp.com/attachments/1013313256078721156/1066884618101469245/2e38c3b827f621c229061c119326c920.jpg" title="Image" alt="Image" draggable="false" /> </div>
+<img class="w-44 h-44 rounded-full mx-auto shadow-avatar" src="https://cdn.discordapp.com/attachments/1004849202507038804/1061444640659734528/IMG_4140.jpg" title="Image" alt="Image" draggable="false" /> </div>
 </div>
-<div class="not-last-child:mb-8">
-<div class="flex justify-center items-center space-x-2">
-<h2 class="text-[20px] text-white font-semibold" style="color: #fff; background-image: url('https://media.discordapp.net/attachments/987149728800198686/991834200309248070/sparkle.gif');filter: drop-shadow(8px 8px 10px #33eb00);color:#33eb00;">dizzy</h2>
-<span class="cursor-pointer text-xl" title="Verified">
-<div class="verified-icon"><img src="https://feds.lol/assets/images/verified.svg" class="verified-icon-image verified-icon-image-dark" style="position: relative; height: 15px; left: 15%;"></div>
-</span>
-<span class="cursor-pointer text-xl" title="Premium">
-<div class="premium"><img src="https://www.svgrepo.com/show/269443/diamond.svg" class="verified-icon-image verified-icon-image-dark" style="position: absoulute; height: 12px; left: 60%;"></div>
-</span>
+                                  </div>
+								  <div class="badge">
+									<img src="https://cdn.discordapp.com/emojis/921533453160292433.webp" style="width: 20px; height: 20px;" alt="Verified">
+									<span class="badge-tooltiptext">Verified</span>
+								  </div>
+								
+
+                                  <div class="badge">
+									<img src="https://cdn.discordapp.com/emojis/970888425634938941.webp?size=80&quality=lossless" style="width: 20px; height: 20px;" alt="Owner">
+									<span class="badge-tooltiptext">Owner</span>
+								  </div>
 </div>
 <p class="text-sm">
-feds.lol/<em>keta</em>
+killa.lol/<em>$</em>
 </p>
 <p class="text-sm">
-<i class="ri-eye-2-fill"></i>
-8278 </p>
-</div>
 <div class="not-last-child:mb-8">
 <div class="mx-auto max-w-[750px]">
 <p>
-<span class="typewrite" data-period="2000" data-type='[ "blueface baby, i am boss."]'>
+<span class="typewrite" data-period="2000" data-type='[ "t/@cxnvicted"]'>
 <span class="wrap"></span>
 </span>
 </p>
@@ -159,58 +390,41 @@ feds.lol/<em>keta</em>
 <div class="flex justify-center items-center space-x-2">
 <div style="text-align: center;">
 <a href="https://discord.com/users/994414595978563604" target="_blank">
-<img src="https://discord.c99.nl/widget/theme-4/994414595978563604.png" style="
-    width: 300px;
-"></a>
+<img src="https://discord.c99.nl/widget/theme-4/994414595978563604.png" style="width: 300px;"></a>
+<div>
+<div class="wrapper">
+    
+    <div class="button other" onclick="window.open('https://www.roblox.com/users/4208898809/profile', '_blank');">
+      <div class="icon">
+          <i class="fas fa-link"></i>
+      </div>
+      <span>Roblox</span>
+    </div>
+  
+    <div class="button discord" onclick="window.open('https://dsc.gg/ico', '_blank');">
+      <div class="icon">
+          <i class="fab fa-discord"></i>
+      </div>
+      <span>discord</span>
+    </div>
+
+    <div class="button discord" onclick="window.open('https://dsc.gg/ico', '_blank');">
+      <div class="icon">
+          <i class="fab fa-discord"></i>
+      </div>
+      <span>discord</span>
+    </div>
+
+    <div class="button telegram" onclick="window.open('https://t.me/cxnvicted', '_blank');">
+      <div class="icon">
+          <i class="fab fa-telegram"></i>
+      </div>
+      <span>telegram</span>
+    </div>
+
+  
 </div>
-</div>
-</div>
-</div>
-<div class="1w-full mx-auto card animate-slide-up not-last-child:mb-12 max-w-[1100px]">
-<center>
-<div class="1w-full mx-auto card animate-slide-up not-last-child:mb-12 max-w-[1100px] items-center justify-center">
-<div class="!p-0" style="max-width:1000px">
-<iframe style="width:400px; margin-bottom: 20px; margin-top:-20px" class="rounded-md w-full sm:w-3/6" src="https://open.spotify.com/embed/track/7D8tKs61tdzzDdG9w6kdu4?si=7020982a0fa043c6?&theme=0" height="80" frameBorder="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
-                        </iframe>
-</div>
-</div> </center>
-<div class="!p-0">
-<div class="flex flex-wrap justify-between gap-6">
-<a href="https://www.instagram.com/dizzy.asd" target="_blank" rel="noopener noreferrer nofollow" title="https://www.instagram.com/dizzy.asd" class="bg-main rounded-xl flex-[100%] sm:flex-[45%] animate-slide-up shadow-4xl p-3 button" style="will-change: opacity, transform">
-<div class="flex items-center justify-between space-x-6">
-<span class="bg-secondary rounded-xl aspect-square h-16 p-3 flex items-center justify-center">
-<img class="drop-shadow-instagram" src="https://feds.lol/module/newww/icons/instagram.svg">
-</span>
-<h2 class="w-full text-left text-grey">
-Instagram
-</h2>
-<span class="w-20" style="margin-left: 46px;">
-<img src="../assets/images/link-button-arrow.svg" style="width: 14px;" class="link-arrows">
-</span>
-</div>
-</a>
-<a href="https://www.discord.gg/1234" target="_blank" rel="noopener noreferrer nofollow" title="https://www.discord.gg/1234" class="bg-main rounded-xl flex-[100%] sm:flex-[45%] animate-slide-up shadow-4xl p-3 button" style="will-change: opacity, transform">
-<div class="flex items-center justify-between space-x-6">
-<span class="bg-secondary rounded-xl aspect-square h-16 p-3 flex items-center justify-center">
-<img class="drop-shadow-twitter" src="https://feds.lol/module/newww/icons/discord.svg">
-</span>
-<h2 class="w-full text-left text-grey">
-Discord
-</h2>
-<span class="w-20" style="margin-left: 46px;">
-<img src="../assets/images/link-button-arrow.svg" style="width: 14px;" class="link-arrows">
-</span>
-</div>
-</a>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</main>
-<script src="/js/page.js?id=2c4f84bac56c0ce1881f"></script>
-<script>
+
 
 function playclip() {
 if (navigator.appName == "Microsoft Internet Explorer" && (navigator.appVersion.indexOf("MSIE 7")!=-1) || (navigator.appVersion.indexOf("MSIE 8")!=-1)) {
