--- a/testing.html
+++ b/testing.html
@@ -5,7 +5,8 @@
 <html lang="en" theme="White">
 <head>
 <meta charset="utf-8">
-<title>dizzy (@keta) · feds.lol</title>
+<title>(@$)Convicted</title>
+<link rel="icon" href="https://cdn.discordapp.com/attachments/1066410151327846410/1066733748378415145/stole20ts.png" type="image/gif" sizes="16x16">
 <meta property="og:title" content="dizzy (@keta) · feds.lol">
 <meta name="description" content="dizzy">
 <meta property="og:description" content="dizzy">
