--- a/testing.html
+++ b/testing.html
@@ -1,33 +1,26 @@
 
 
-
 <!DOCTYPE html>
 <html lang="en" theme="White">
 <head>
 <meta charset="utf-8">
-<title>(@$)Convicted</title>
-<link rel="icon" href="https://cdn.discordapp.com/attachments/1066410151327846410/1066733748378415145/stole20ts.png" type="image/gif" sizes="16x16">
-<meta property="og:title" content="dizzy (@keta) · feds.lol">
-<meta name="description" content="dizzy">
-<meta property="og:description" content="dizzy">
+<title>イザナミ (@$) · feds.lol</title>
+<meta property="og:title" content="イザナミ (@$) · feds.lol">
+<meta name="description" content="イザナミ">
+<meta property="og:description" content="イザナミ">
 <meta name="twitter:card" content="summary">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="theme-color" content="#2F3136">
 <link href="../assets/images/verified.svg" rel="shortcut icon" type="image/x-icon">
 <meta name="twitter:card" content="summary">
 <link rel="preload" href="https://feds.lol/module/newww/css/app.css" as="style">
-<style>@import url('//fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');</style>
-<link href="https://fonts.cdnfonts.com/css/common-pixel" rel="stylesheet">
-<style>@import url('https://fonts.cdnfonts.com/css/common-pixel');</style>
-<link href="https://fonts.cdnfonts.com/css/pf-tempesta-five" rel="stylesheet">
-<style>@import url('https://fonts.cdnfonts.com/css/pf-tempesta-five');</style>
 <link rel="stylesheet" href="https://feds.lol/module/newww/main.css">
 <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 <link href="assets/vendors/animation/animate.css" rel="stylesheet">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <link href="assets/vendors/animation/animate.css" rel="stylesheet">
 <script src="./script.js" data-site="IHGLANPG" defer></script>
-<script nonce="e06fd873-c6b5-46b6-a8b4-0462119725ae">(function(w,d){!function(f,g,h,i){f[h]=f[h]||{};f[h].executed=[];f.zaraz={deferred:[],listeners:[]};f.zaraz.q=[];f.zaraz._f=function(j){return function(){var k=Array.prototype.slice.call(arguments);f.zaraz.q.push({m:j,a:k})}};for(const l of["track","set","debug"])f.zaraz[l]=f.zaraz._f(l);f.zaraz.init=()=>{var m=g.getElementsByTagName(i)[0],n=g.createElement(i),o=g.getElementsByTagName("title")[0];o&&(f[h].t=g.getElementsByTagName("title")[0].text);f[h].x=Math.random();f[h].w=f.screen.width;f[h].h=f.screen.height;f[h].j=f.innerHeight;f[h].e=f.innerWidth;f[h].l=f.location.href;f[h].r=g.referrer;f[h].k=f.screen.colorDepth;f[h].n=g.characterSet;f[h].o=(new Date).getTimezoneOffset();if(f.dataLayer)for(const s of Object.entries(Object.entries(dataLayer).reduce(((t,u)=>({...t[1],...u[1]})))))zaraz.set(s[0],s[1],{scope:"page"});f[h].q=[];for(;f.zaraz.q.length;){const v=f.zaraz.q.shift();f[h].q.push(v)}n.defer=!0;for(const w of[localStorage,sessionStorage])Object.keys(w||{}).filter((y=>y.startsWith("_zaraz_"))).forEach((x=>{try{f[h]["z_"+x.slice(7)]=JSON.parse(w.getItem(x))}catch{f[h]["z_"+x.slice(7)]=w.getItem(x)}}));n.referrerPolicy="origin";n.src="/ventryshield/contents.js?z="+btoa(encodeURIComponent(JSON.stringify(f[h])));m.parentNode.insertBefore(n,m)};["complete","interactive"].includes(g.readyState)?zaraz.init():f.addEventListener("DOMContentLoaded",zaraz.init)}(w,d,"zarazData","script");})(window,document);</script></head>
+<script nonce="241f2893-28aa-4e2e-aaef-bce2f9d63c18">(function(w,d){!function(f,g,h,i){f[h]=f[h]||{};f[h].executed=[];f.zaraz={deferred:[],listeners:[]};f.zaraz.q=[];f.zaraz._f=function(j){return function(){var k=Array.prototype.slice.call(arguments);f.zaraz.q.push({m:j,a:k})}};for(const l of["track","set","debug"])f.zaraz[l]=f.zaraz._f(l);f.zaraz.init=()=>{var m=g.getElementsByTagName(i)[0],n=g.createElement(i),o=g.getElementsByTagName("title")[0];o&&(f[h].t=g.getElementsByTagName("title")[0].text);f[h].x=Math.random();f[h].w=f.screen.width;f[h].h=f.screen.height;f[h].j=f.innerHeight;f[h].e=f.innerWidth;f[h].l=f.location.href;f[h].r=g.referrer;f[h].k=f.screen.colorDepth;f[h].n=g.characterSet;f[h].o=(new Date).getTimezoneOffset();if(f.dataLayer)for(const s of Object.entries(Object.entries(dataLayer).reduce(((t,u)=>({...t[1],...u[1]})))))zaraz.set(s[0],s[1],{scope:"page"});f[h].q=[];for(;f.zaraz.q.length;){const v=f.zaraz.q.shift();f[h].q.push(v)}n.defer=!0;for(const w of[localStorage,sessionStorage])Object.keys(w||{}).filter((y=>y.startsWith("_zaraz_"))).forEach((x=>{try{f[h]["z_"+x.slice(7)]=JSON.parse(w.getItem(x))}catch{f[h]["z_"+x.slice(7)]=w.getItem(x)}}));n.referrerPolicy="origin";n.src="/ventryshield/contents.js?z="+btoa(encodeURIComponent(JSON.stringify(f[h])));m.parentNode.insertBefore(n,m)};["complete","interactive"].includes(g.readyState)?zaraz.init():f.addEventListener("DOMContentLoaded",zaraz.init)}(w,d,"zarazData","script");})(window,document);</script></head>
 <body class="fedslol">
 <script>
 
@@ -103,235 +96,31 @@ window.onload = function () {
 <style>
 
 
-.wrapper .button {
-        display: inline-block;
-        height: 60px;
-        width: 60px;
-        float: left;
-        margin: 0 5px;
-        overflow: hidden;
-        background: rgb(135, 167, 250);
-        border-radius: 51px;
-        cursor: pointer;
-        box-shadow: 0px 10px 10px rgb(0, 0, 0);
-        transition: all 0.3s ease-out;
-        color: black;
-    }
+.click_anywhere {
 
-    .wrapper .button:hover {
-        width: 200px;
-        color: black;
-    }
-
-    .wrapper .button .icon {
-        display: inline-block;
-        height: 60px;
-        width: 60px;
-        text-align: center;
-        border-radius: 500px;
-        box-sizing: border-box;
-        line-height: 60px;
-        transition: all 0.3s ease-out;
-    }
-
-    .wrapper .button .icon i {
-        font-size: 25px;
-        line-height: 60px;
-        transition: all 0.3s ease-out;
-    }
-
-    .wrapper .button:hover .icon i {
-        color: #fff;
-    }
-
-    .wrapper .button span {
-        font-size: 20px;
-        font-weight: 500;
-        line-height: 60px;
-        margin-left: 10px;
-        transition: all 0.3s ease-out;
-        color: black;
-    }
-
-    .footer p, h4, a {
-        text-align: center;
-        color: white;
-    }
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);	
+	
+}
 
 
-    /*
-    --------------------------------------------
-    */
 
-    .wrapper .button.discord:hover .icon {
-        background: #303030;
-    }
-
-    .wrapper .button.discord span {
-        color: #303030;
-    }
-
-    .wrapper .button.github:hover .icon {
-        background: #303030;
-    }
-
-    .wrapper .button.github span {
-        color: #303030;
-    }
-
-    .wrapper .button.tiktok:hover .icon {
-        background: #303030;
-    }
-
-    .wrapper .button.tiktok span {
-        color: #303030;
-    }
-
-    .wrapper .button.youtube:hover .icon {
-        background: #303030;
-    }
-
-    .wrapper .button.youtube span {
-        color: #303030;
-    }
-
-    .wrapper .button.twitch:hover .icon {
-        background: #303030;
-    }
-
-    .wrapper .button.twitch span {
-        color: #303030;
-    }
-
-    .wrapper .button.twitter:hover .icon {
-        background: #303030;
-    }
-
-    .wrapper .button.twitter span {
-        color: #303030;
-    }
-
-    .wrapper .button.snapchat:hover .icon {
-        background: #303030;
-    }
-
-    .wrapper .button.snapchat span {
-        color: #303030;
-    }
-
-    .wrapper .button.steam:hover .icon {
-        background: #303030;
-    }
-
-    .wrapper .button.steam span {
-        color: #303030;
-    }
-
-    .wrapper .button.instagram:hover .icon {
-        background: #303030;
-    }
-
-    .wrapper .button.instagram span {
-        color: #303030;
-    }
-
-    .wrapper .button.facebook:hover .icon {
-        background: #4267B2;
-    }
-
-    .wrapper .button.facebook span {
-        color: #4353ff
-    }
-
-    .wrapper .button.spotify:hover .icon {
-        background: #303030;
-    }
-
-    .wrapper .button.spotify span {
-        color: #303030;
-    }
-
-    .wrapper .button.reddit:hover .icon {
-        background: #303030;
-    }
-
-    .wrapper .button.reddit span {
-        color: #303030;
-    }
-
-    .wrapper .button.soundcloud:hover .icon {
-        background: #303030;
-    }
-
-    .wrapper .button.soundcloud span {
-        color: #303030;
-    }
-
-    .wrapper .button.pinterest:hover .icon {
-        background: #303030;
-    }
-
-    .wrapper .button.pinterest span {
-        color: #303030;
-    }
-
-    .wrapper .button:hover .icon {
-        background: #303030;
-    }
-
-    .wrapper .button span {
-        color: #303030;
-    }
-
-    .badge {
-        position: relative;
-        display: inline-block;
-        height: 28px;
-        width: 28px;
-    }
-
-    .badge .badge-tooltiptext {
-        visibility: hidden;
-        width: 120px;
-        background-color: #555;
-        color: #fff;
-        text-align: center;
-        border-radius: 6px;
-        padding: 5px 0;
-        position: absolute;
-        z-index: 1;
-        bottom: 125%;
-        left: 50%;
-        margin-left: -60px;
-        opacity: 0;
-        transition: opacity 0.3s;
-    }
-
-    .badge .badge-tooltiptext::after {
-        content: "";
-        position: absolute;
-        top: 100%;
-        left: 50%;
-        margin-left: -5px;
-        border-width: 5px;
-        border-style: solid;
-        border-color: #555 transparent transparent transparent;
-    }
-
-    .badge:hover .badge-tooltiptext {
-        visibility: visible;
-        opacity: 1;
-    }
-
-    .editBtn {
-        background-color: #282828;
-        background-size: cover;
-        border-radius: 7px;
-        padding: 8px;
-        color: white;
-        cursor: pointer;
-    }
 </style>
+<div class="clickanywhere premium_border">
+<div class="click_body" style="height:100%;width:100%;">
+<div class="click_anywhere">
+<h4 style="color:white;font-size:12pt;">[Click Anywhere]</h4>
+</div>
+<audio>
+<source src="https://cdn.discordapp.com/attachments/1018078492585377823/1066000952177467472/Vitux_-_Deixa_Escondido_Speed_Official_Music.mp3" type="audio/mpeg">
+<source src="https://cdn.discordapp.com/attachments/1018078492585377823/1066000952177467472/Vitux_-_Deixa_Escondido_Speed_Official_Music.mp3" type="audio/ogg">
+</audio>
+<div id="sounddiv"><bgsound id="sound"></div>
+</div>
+</div>
 <div class="biolink" style="display:none;height:100%;width:100%;">
 <div class="relative w-full h-full px-4 py-16 table">
 <div class="table-cell align-middle text-center">
@@ -341,7 +130,10 @@ window.onload = function () {
 <div class="-mt-[85px]">
 <img class="w-44 h-44 rounded-full mx-auto shadow-avatar" src="https://cdn.discordapp.com/attachments/1004849202507038804/1061444640659734528/IMG_4140.jpg" title="Image" alt="Image" draggable="false" /> </div>
 </div>
-                                  </div>
+<div class="not-last-child:mb-8">
+<div class="flex justify-center items-center space-x-2">
+<h2 class="text-[20px] text-white font-semibold" style="color: #fff; background-image: url('https://media.discordapp.net/attachments/987149728800198686/991834200309248070/sparkle.gif');filter: drop-shadow(8px 8px 10px #ffffff);color:#ffffff;">مدان</h2>
+</div>
 								  <div class="badge">
 									<img src="https://cdn.discordapp.com/emojis/921533453160292433.webp" style="width: 20px; height: 20px;" alt="Verified">
 									<span class="badge-tooltiptext">Verified</span>
@@ -353,14 +145,18 @@ window.onload = function () {
 									<span class="badge-tooltiptext">Owner</span>
 								  </div>
 </div>
+</div>
 <p class="text-sm">
 killa.lol/<em>$</em>
 </p>
 <p class="text-sm">
+<i class="ri-eye-2-fill"></i>
+561 </p>
+</div>
 <div class="not-last-child:mb-8">
 <div class="mx-auto max-w-[750px]">
 <p>
-<span class="typewrite" data-period="2000" data-type='[ "t/@cxnvicted"]'>
+<span class="typewrite" data-period="2000" data-type='[ "Owner of Killa.lol"]'>
 <span class="wrap"></span>
 </span>
 </p>
@@ -368,42 +164,91 @@ killa.lol/<em>$</em>
 </div>
 <div class="flex justify-center items-center space-x-2">
 <div style="text-align: center;">
-<a href="https://discord.com/users/994414595978563604" target="_blank">
-<img src="https://discord.c99.nl/widget/theme-4/994414595978563604.png" style="width: 300px;"></a>
-<div>
-<div class="wrapper">
-    
-    <div class="button other" onclick="window.open('https://www.roblox.com/users/4208898809/profile', '_blank');">
-      <div class="icon">
-          <i class="fas fa-link"></i>
-      </div>
-      <span>Roblox</span>
-    </div>
-  
-    <div class="button discord" onclick="window.open('https://dsc.gg/ico', '_blank');">
-      <div class="icon">
-          <i class="fab fa-discord"></i>
-      </div>
-      <span>discord</span>
-    </div>
-
-    <div class="button discord" onclick="window.open('https://dsc.gg/ico', '_blank');">
-      <div class="icon">
-          <i class="fab fa-discord"></i>
-      </div>
-      <span>discord</span>
-    </div>
-
-    <div class="button telegram" onclick="window.open('https://t.me/cxnvicted', '_blank');">
-      <div class="icon">
-          <i class="fab fa-telegram"></i>
-      </div>
-      <span>telegram</span>
-    </div>
-
-  
+<a href="https://discord.com/users/1000022273673138226" target="_blank">
+<img src="https://discord.c99.nl/widget/theme-4/1000022273673138226.png" style="
+    width: 300px;
+"></a>
 </div>
-
+</div>
+</div>
+</div>
+<div class="1w-full mx-auto card animate-slide-up not-last-child:mb-12 max-w-[1100px]">
+<div class="!p-0">
+<div class="flex flex-wrap justify-between gap-6">
+<a href="https://www.instagram.com/hiigreed" target="_blank" rel="noopener noreferrer nofollow" title="https://www.instagram.com/hiigreed" class="bg-main rounded-xl flex-[100%] sm:flex-[45%] animate-slide-up shadow-4xl p-3 button" style="will-change: opacity, transform">
+<div class="flex items-center justify-between space-x-6">
+<span class="bg-secondary rounded-xl aspect-square h-16 p-3 flex items-center justify-center">
+<img class="drop-shadow-instagram" src="https://feds.lol/module/newww/icons/instagram.svg">
+</span>
+<h2 class="w-full text-left text-grey">
+Instagram
+</h2>
+<span class="w-20" style="margin-left: 46px;">
+<img src="../assets/images/link-button-arrow.svg" style="width: 14px;" class="link-arrows">
+</span>
+</div>
+</a>
+<a href="https://www.twitter.com/wryxse" target="_blank" rel="noopener noreferrer nofollow" title="https://www.twitter.com/wryxse" class="bg-main rounded-xl flex-[100%] sm:flex-[45%] animate-slide-up shadow-4xl p-3 button" style="will-change: opacity, transform">
+<div class="flex items-center justify-between space-x-6">
+<span class="bg-secondary rounded-xl aspect-square h-16 p-3 flex items-center justify-center">
+<img class="drop-shadow-twitter" src="https://feds.lol/module/newww/icons/twitter.svg">
+</span>
+<h2 class="w-full text-left text-grey">
+Twitter
+</h2>
+<span class="w-20" style="margin-left: 46px;">
+<img src="../assets/images/link-button-arrow.svg" style="width: 14px;" class="link-arrows">
+</span>
+</div>
+</a>
+<a href="https://www.discord.gg/annoy" target="_blank" rel="noopener noreferrer nofollow" title="https://www.discord.gg/annoy" class="bg-main rounded-xl flex-[100%] sm:flex-[45%] animate-slide-up shadow-4xl p-3 button" style="will-change: opacity, transform">
+<div class="flex items-center justify-between space-x-6">
+<span class="bg-secondary rounded-xl aspect-square h-16 p-3 flex items-center justify-center">
+<img class="drop-shadow-twitter" src="https://feds.lol/module/newww/icons/discord.svg">
+</span>
+<h2 class="w-full text-left text-grey">
+Discord
+</h2>
+ <span class="w-20" style="margin-left: 46px;">
+<img src="../assets/images/link-button-arrow.svg" style="width: 14px;" class="link-arrows">
+</span>
+</div>
+</a>
+<a href="https://youtube.com/OutcastHaunt" target="_blank" rel="noopener noreferrer nofollow" title="https://youtube.com/OutcastHaunt" class="bg-main rounded-xl flex-[100%] sm:flex-[45%] animate-slide-up shadow-4xl p-3 button" style="will-change: opacity, transform">
+<div class="flex items-center justify-between space-x-6">
+<span class="bg-secondary rounded-xl aspect-square h-16 p-3 flex items-center justify-center">
+<img class="drop-shadow-youtube" src="https://feds.lol/module/newww/icons/youtube.svg">
+</span>
+<h2 class="w-full text-left text-grey">
+Youtube
+</h2>
+<span class="w-20" style="margin-left: 46px;">
+<img src="../assets/images/link-button-arrow.svg" style="width: 14px;" class="link-arrows">
+</span>
+</div>
+</a>
+<a href="https://ogu.gg/haunt" target="_blank" rel="noopener noreferrer nofollow" title="https://ogu.gg/haunt" class="bg-main rounded-xl flex-[100%] sm:flex-[45%] animate-slide-up shadow-4xl p-3 button" style="will-change: opacity, transform">
+<div class="flex items-center justify-between space-x-6">
+<span class="bg-secondary rounded-xl aspect-square h-16 p-3 flex items-center justify-center">
+<img class="drop-shadow-paypal" src="https://feds.lol/module/newww/icons/ogu.svg">
+</span>
+<h2 class="w-full text-left text-grey">
+Ogu
+</h2>
+<span class="w-20" style="margin-left: 46px;">
+<img src="../assets/images/link-button-arrow.svg" style="width: 14px;" class="link-arrows">
+</span>
+</div>
+</a>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</main>
+<script src="/js/page.js?id=2c4f84bac56c0ce1881f"></script>
+<script>
 
 function playclip() {
 if (navigator.appName == "Microsoft Internet Explorer" && (navigator.appVersion.indexOf("MSIE 7")!=-1) || (navigator.appVersion.indexOf("MSIE 8")!=-1)) {
@@ -446,6 +291,6 @@ jQuery.Event.prototype.stopPropagation = function() {
 };             
 
 </script>
-<script defer src="https://static.cloudflareinsights.com/beacon.min.js/vaafb692b2aea4879b33c060e79fe94621666317369993" integrity="sha512-0ahDYl866UMhKuYcW078ScMalXqtFJggm7TmlUtp0UlD4eQk0Ixfnm5ykXKvGJNFjLMoortdseTfsRT8oCfgGA==" data-cf-beacon='{"rayId":"78ff8e7e3c2fee6f","token":"033c33a962e74d16be982c1223e03590","version":"2022.11.3","si":100}' crossorigin="anonymous"></script>
+<script defer src="https://static.cloudflareinsights.com/beacon.min.js/vaafb692b2aea4879b33c060e79fe94621666317369993" integrity="sha512-0ahDYl866UMhKuYcW078ScMalXqtFJggm7TmlUtp0UlD4eQk0Ixfnm5ykXKvGJNFjLMoortdseTfsRT8oCfgGA==" data-cf-beacon='{"rayId":"78ffaafc1df76f49","token":"033c33a962e74d16be982c1223e03590","version":"2022.11.3","si":100}' crossorigin="anonymous"></script>
 </body>
 </html>
